syntax = "proto3";

package org.project_planton.provider.cloudflare.cloudflarer2bucket.v1;

// CloudflareR2BucketStackOutputs captures the outputs after provisioning the R2 bucket.
message CloudflareR2BucketStackOutputs {
  // The name of the bucket (same as spec.bucket_name)
  string bucket_name = 1;

  // The accessible bucket URL (e.g., R2 public endpoint or base S3 API URL)
  string bucket_url = 2;
}
